# semordnilap

./: README.md  pyproject.toml
scripts/: freeling_analize.sh
src/semordnilap/: __init__.py  embed.py  extract.py  load.py  prepare_lexicon.py  search_engine.py
src/semordnilap/app/: app.py
src/semordnilap/app/logic/: filtering.py  iteration.py  loader.py  persistence.py  state.py
src/semordnilap/app/ui/: main_window.py
src/semordnilap/app/viewmodel/: semordnilap_vm.py
src/semordnilap/candidates/: main.py
src/semordnilap/candidates/filtering/: rules.py
src/semordnilap/corpus/: __init__.py  wikisource.py
src/semordnilap/embed/: engine.py  factory.py  main.py
src/semordnilap/extract/: main.py
src/semordnilap/extract/languages/: __init__.py  galician.py  spanish.py
src/semordnilap/extract_engine/: base.py  core.py  main.py  utils.py
src/semordnilap/extract_engine/languages/: __init__.py  galician.py  spanish.py
src/semordnilap/lang/: __init__.py
src/semordnilap/lang/agreements/: __init__.py  es.py  gl.py
src/semordnilap/lang/tagset/: __init__.py  base.py  es.py  gl.py
src/semordnilap/lexicon/: main.py
src/semordnilap/ngrams/: __init__.py
src/semordnilap/ngrams/application/: __init__.py  commands.py  services.py
src/semordnilap/ngrams/cli/: __init__.py  extract.py
src/semordnilap/ngrams/domain/: __init__.py  filters.py  model.py  normalize.py  scoring.py  services.py  tokenize.py
src/semordnilap/ngrams/infrastructure/: __init__.py  factory.py  repositories.py
src/semordnilap/pattern/: main.py
src/semordnilap/phrases/: __init__.py
src/semordnilap/phrases/application/: __init__.py  commands.py  services.py
src/semordnilap/phrases/cli/: __init__.py  generate.py
src/semordnilap/phrases/domain/: __init__.py  model.py  services.py
src/semordnilap/phrases/infrastructure/: __init__.py  plausibility.py  tsv_repository.py
src/semordnilap/review/: __init__.py
src/semordnilap/review/application/: __init__.py  services.py
src/semordnilap/review/cli/: __init__.py  gradio_app.py
src/semordnilap/review/domain/: __init__.py  model.py
src/semordnilap/review/infrastructure/: __init__.py  tsv_repository.py
src/semordnilap/search/: __init__.py  engine.py
src/semordnilap/search/application/: __init__.py  commands.py  services.py
src/semordnilap/search/cli/: __init__.py  find_ngrams.py
src/semordnilap/search/domain/: __init__.py  model.py
src/semordnilap/search/infrastructure/: __init__.py  duckdb_repository.py
src/semordnilap/tagging/: freeling.py  main.py
src/semordnilap/utils/: io.py  iterables.py  text.py
tests/: test_app_filtering.py  test_ngrams.py  test_phrases.py  test_review.py  test_search_ngrams.py
